--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     </section>
     <footer>
     </footer>
+    <script src="https://kit.fontawesome.com/ebda0b4e08.js" crossorigin="anonymous"></script>
   </body>
 </html>
